--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,13 @@ dependencies:
     sdk: flutter
   get: ^4.6.6
   get_storage: ^2.1.1
-  intl: ^0.19.0
-  easy_date_timeline: ^1.1.2
-  google_fonts: ^6.2.1
+  intl: ^0.20.2
+  easy_date_timeline: ^2.0.9
+  google_fonts: ^8.0.1
   uuid: ^4.3.3
-  flutter_local_notifications: ^17.0.0
-  timezone: ^0.9.2
+  # flutter_local_notifications: ^17.0.0
+  # timezone: ^0.9.2
+  awesome_notifications: ^0.10.1
 
 dev_dependencies:
   flutter_test:
