--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   # flutter_local_notifications: ^17.0.0
   # timezone: ^0.9.2
   awesome_notifications: ^0.10.1
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
