--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   awesome_notifications: ^0.10.1
   confetti: ^0.7.0
   flutter_staggered_grid_view: ^0.7.0
+  image_picker: ^1.0.7
+  share_plus: ^10.0.0
+  speech_to_text: ^7.0.0
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
